// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should match snapshots 1`] = `
<styled.div>
  <ActionSpinner
    operationState="SCHEDULED"
  />
  <ActionItems />
</styled.div>
`;

exports[`Actions should match snapshots 2`] = `
<styled.div>
  <ActionSpinner
    operationState="FAILED"
  />
  <StatusItems>
    <Item
      type="UPDATE_RETRIES"
    />
  </StatusItems>
  <ActionItems />
</styled.div>
`;
